[tool.poetry]
name = "acme-dns-sidecar"
version = "0.1.0"
description = "Register in acme-dns using Kubernetes secrets"
authors = ["Elouan Martinet <exa@elou.world>"]
license = "Unlicense"
include = ["UNLICENSE"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"
kubernetes = "^11.0.0"
tomlkit = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
