[tool.poetry]
name = "acme-dns-sidecar"
version = "0.1.0"
description = "Register in acme-dns using Kubernetes secrets"
authors = ["Elouan Martinet <exa@elou.world>"]
license = "Unlicense"
include = ["UNLICENSE"]

[tool.poetry.dependencies]
python = "^3.11.2"
kubernetes = "^29.0"
tomlkit = "^0.12.4"
bcrypt = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
